Safari365 Prod/src/objects/Service_Line_Item_ChargeType__c.object
<CustomObject>
    <description>This object will have the details for Service Line Items. The details this object will have are Charge Type, Currency, Nett Cost, Markup (%) and Total.</description>
    <fields>
        <fullName>Additional_Cost_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Cost Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Cost_PhotoBook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Cost PhotoBook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service Charge</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Other Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <label>Charge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Cur</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Not_Include_Extra_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Include Extra Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extra__c</fullName>
        <label>Extra</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Additional_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Additional Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Discounted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDiscounted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Markup__c</fullName>
        <label>%</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Nett_Cost__c</fullName>
        <label>Nett</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overide_Markup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overide Markup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Nett_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Nett Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passenger_Name__c</fullName>
        <formula>Selected_Passenger__r.PassengerName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passenger Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_OPD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected OPD</label>
        <referenceTo>OPD__c</referenceTo>
        <relationshipLabel>Service Line Item ChargeTypes</relationshipLabel>
        <relationshipName>Service_Line_Item_ChargeTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_OPT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected OPT</label>
        <referenceTo>Opt__c</referenceTo>
        <relationshipLabel>Service Line Item ChargeTypes</relationshipLabel>
        <relationshipName>Service_Line_Item_ChargeTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_Passenger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Passenger</label>
        <referenceTo>Passenger__c</referenceTo>
        <relationshipLabel>Service Line Item ChargeTypes</relationshipLabel>
        <relationshipName>Service_Line_Item_ChargeTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Line Item</label>
        <referenceTo>ServiceLineItem__c</referenceTo>
        <relationshipLabel>Service Line Item ChargeTypes</relationshipLabel>
        <relationshipName>Service_Line_Item_ChargeTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Sale</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Service Line Item ChargeType</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Selected_Passenger__c</columns>
        <columns>Service_Line_Item__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Currency__c</columns>
        <columns>Charge_Type__c</columns>
        <columns>Nett_Cost__c</columns>
        <columns>Total__c</columns>
        <columns>Selected_OPT__c</columns>
        <columns>Selected_OPD__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SLICT-{00000000}</displayFormat>
        <label>Service Line Item Charge Type</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Line Item ChargeTypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>